[project]
name = "travelmaker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopandas>=1.0.1",
    "pandas>=2.2.3",
    "streamlit-folium>=0.24.0",
    "streamlit>=1.40.2",
    "matplotlib>=3.10.0",
    "mapclassify>=2.8.1",
]
